--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		.title{
 			font-family: 'Lato', sans-serif;
-			background-color: #f29933;
+			background-color: #ab5102;
 			color: white;
 		}
 
@@ -49,9 +49,9 @@
 		}
 
 		.logo img{
-			height: 2.5em;
 			margin: 1em;
 		}
+
 	</style>
 
 </head>
@@ -94,23 +94,23 @@
 					<td>+91 94214 93219</td>
 				</tr>
 				<tr>
-					<th>Email (Work):</th>
+					<th>Email(Work):</th>
 					<td>mail@raunaksingwi.me</td>
 				</tr>
 				<tr>
-					<th>Email (Personal):</th>
+					<th>Email(Personal):</th>
 					<td>raunaksingwi7@gmail.com</td>
 				</tr>
 			</table>
 			<div class="row">
 				<div class="col-xs-12 logo">
-					<a href="http://www.github.com/raunaksingwi"><img src="pics/github.png" alt="GitHub Logo"></a>
+					<a href="http://www.github.com/raunaksingwi"><img src="pics/github.png" alt="GitHub Logo" style="height: 3em;"></a>
 
-					<a href="http://www.hackerrank.com/raunaksingwi"><img src="pics/hackerrank.png" alt="HackerRank Logo"></a>
+					<a href="http://www.hackerrank.com/raunaksingwi"><img src="pics/hackerrank.png" alt="HackerRank Logo" style="height: 3em;></a>
 
-					<a href="https://www.linkedin.com/in/raunak-singwi-407087bb/"><img src="pics/linkedin.png" alt="Linkedin Logo"></a>
+					<a href="https://www.linkedin.com/in/raunak-singwi-407087bb/"><img src="pics/linkedin.png" alt="Linkedin Logo" style="height: 3.5em;></a>
 
-					<a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber"><img src="pics/youtube.png" alt="YouTube Logo"></a>
+					<a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber"><img src="pics/youtube.png" alt="YouTube Logo" style="height: 2.5em;"></a>
 				</div>
 			</div>
 		</div>
