--- a/index.html
+++ b/index.html
@@ -104,13 +104,21 @@
 			</table>
 			<div class="row">
 				<div class="col-xs-12 logo">
-					<a href="http://www.github.com/raunaksingwi"><img src="pics/github.png" alt="GitHub Logo" style="height: 3em;"></a>
+					<a href="http://www.github.com/raunaksingwi" target="_blank">
+						<img src="pics/github.png" alt="GitHub Logo" style="height: 3em;">
+					</a>
 
-					<a href="http://www.hackerrank.com/raunaksingwi"><img src="pics/hackerrank.png" alt="HackerRank Logo" style="height: 3em;></a>
+					<a href="http://www.hackerrank.com/raunaksingwi" target="_blank">
+						<img src="pics/hackerrank.png" alt="HackerRank Logo" style="height: 3em;">
+					</a>
 
-					<a href="https://www.linkedin.com/in/raunak-singwi-407087bb/"><img src="pics/linkedin.png" alt="Linkedin Logo" style="height: 3.5em;></a>
+					<a href="https://www.linkedin.com/in/raunak-singwi-407087bb/" target="_blank">
+						<img src="pics/linkedin.png" alt="Linkedin Logo" style="height: 3.5em;"">
+					</a>
 
-					<a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber"><img src="pics/youtube.png" alt="YouTube Logo" style="height: 2.5em;"></a>
+					<a href="https://www.youtube.com/channel/UCS3X-xdL0iS0hdHHShrMifw?view_as=subscriber" target="_blank">
+						<img src="pics/youtube.png" alt="YouTube Logo" style="height: 2.5em;">
+					</a>
 				</div>
 			</div>
 		</div>
@@ -120,7 +128,7 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and then see something amazing happen is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my dessert. Apart from that, I love skateboarding and swimming. </p>
+			<p>'<i>Moodie and Foodie</i>' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and then see something amazing happen is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my dessert. Apart from that, I love skateboarding and swimming. </p>
 		</div>
 	</div>
 
@@ -140,7 +148,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<h1>Ramdeobaba College of Engineering, Nagpur</h1>
-        	<h4>Current: Final Year</h4>
+        	<h4><i>Current: Final Year</i></h4>
 		</div>
 		<div class="col-xs-12 col-md-9">
 					<p>Well, college is not what I assumed it to be. And definitely not what others told me about it ! All those, physics chemistry and mathematics classes in 1st year... I hated them ! I thought 2nd year will be where we dive into technology and start making software. How immature I was... I didn't want to learn most of the subjects ! I always wanted to be a software developer, a coder,a designer.... But yes, here I met genius people who guided me to become what I want to be. And yes, college have taught me a lot. It taught me, how to learn on your own. How to study the whole night to pass the exams next morning. How to do work with patience and dedication you don't like to do(writing journals and assignments). And the hostel life.... It taught me to adjust with everyone, quickly adopt the situations, how to work in a team, and much more. Hostel life is amazingly fun. </p>
@@ -149,7 +157,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<h1>Padhye Sir's Akash Education, Akola</h1>
-        	<h4>The <big>Bad</big> Times...</h4>
+        	<h4><i>The <big>Bad</big> Times...</i></h4>
 		</div>
 		<div class="col-xs-12 col-md-9">
 					<p>I liked mathematics and science in school. I even managed to pass the entrance test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't study. It was all miserable. I have learned a lot from my mistakes. I won't make such mistakes ever again.</p>
@@ -158,7 +166,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 					<h1>Dinbai High School, Digras</h1>
-                	<h4>Wonderland...The Awesome Times...</h4>
+                	<h4><i>Wonderland...The Awesome Times...</i></h4>
 		</div>
 		<div class="col-xs-12 col-md-9">
 					<p>This was probably the best time of my life. It was fun. Life seemed very simple. Living with family. All those friends, those memories... School really shaped my life. It helped me explore myself and identify my qualities and weaknesses. I was a good student at school. Good at academics as well as extra-curricular.</p>
