Make code readable

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 			font-size: 2em;
 		}
 
+		li{
+			font-size: 2em;
+		}
+
 		.title{
 			font-family: 'Lato', sans-serif;
 			background-color: #ab5102;
@@ -44,10 +48,6 @@
 			font-size: 1em
 		}
 
-		li{
-			font-size: 2em;
-		}
-
 		.logo img{
 			margin: 1em;
 		}
@@ -59,7 +59,7 @@
 <body>
 
 <div class="container">
-
+	<!-- PROFILE -->
 	<div class="row">
 		<div class="col-xs-12 col-md-4 col-lg-3 title">
 			<h2><span class="glyphicon glyphicon-user"></span> PROFILE</h2>
@@ -68,18 +68,23 @@
 	
 	<br>
 	<br>
-
+	<!-- PROFILE -->
 	<div class="row">
+
+		<!-- IMAGE -->
 		<div class="col-xs-12 col-md-3">
 			<img src="pics/formal.jpg" alt="Raunak" class="img-responsive">
 			<br><br>
 		</div>
+		<!-- DESIGNATION -->
 		<div class="col-xs-12 col-md-5">
 			<h1>Raunak Singwi</h1>
 			<h4 style="color: #4ca5d0">R&D Intern, VMware.</h4>
 			<br><br>
 		</div>
+		
 		<div class="col-xs-12 col-md-4">
+			<!-- BIO -->
 			<table class="bio">
 				<tr>
 					<th>Name:</th>
@@ -102,8 +107,11 @@
 					<td>raunaksingwi7@gmail.com</td>
 				</tr>
 			</table>
+
 			<div class="row">
+
 				<div class="col-xs-12 logo">
+
 					<a href="http://www.github.com/raunaksingwi" target="_blank">
 						<img src="pics/github.png" alt="GitHub Logo" style="height: 3em;">
 					</a>
@@ -123,50 +131,55 @@
 			</div>
 		</div>
 	</div>
-	<br><br>
 
+	<br>
+	<br>
 
+	<!-- ABOUT ME -->
 	<div class="row">
 		<div class="col-xs-12">
-			<p>'<i>Moodie and Foodie</i>' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and then see something amazing happen is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my dessert. Apart from that, I love skateboarding and swimming. </p>
+			<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and then see something amazing happen is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my dessert. Apart from that, I love skateboarding and swimming. </p>
 		</div>
 	</div>
 
 	<br>
 	<br>
 	<br>
-
-
+	<!-- JOURNEY SO FAR -->
 	<div class="row">
 		<div class="col-xs-12 col-md-5 col-lg-4 title">
 			<h2><span class="glyphicon glyphicon-road"></span> JOURNEY SO FAR</h2>
 		</div>
 	</div>
 
-	<br><br>
+	<br>
+	<br>
 
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<h1>Ramdeobaba College of Engineering, Nagpur</h1>
-        	<h4><i>Current: Final Year</i></h4>
+        	<h4>Current: Final Year</h4>
 		</div>
 		<div class="col-xs-12 col-md-9">
 					<p>Well, college is not what I assumed it to be. And definitely not what others told me about it ! All those, physics chemistry and mathematics classes in 1st year... I hated them ! I thought 2nd year will be where we dive into technology and start making software. How immature I was... I didn't want to learn most of the subjects ! I always wanted to be a software developer, a coder,a designer.... But yes, here I met genius people who guided me to become what I want to be. And yes, college have taught me a lot. It taught me, how to learn on your own. How to study the whole night to pass the exams next morning. How to do work with patience and dedication you don't like to do(writing journals and assignments). And the hostel life.... It taught me to adjust with everyone, quickly adopt the situations, how to work in a team, and much more. Hostel life is amazingly fun. </p>
 		</div>
 	</div>
+
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<h1>Padhye Sir's Akash Education, Akola</h1>
-        	<h4><i>The <big>Bad</big> Times...</i></h4>
+        	<h4>The <big>Bad</big> Times...</h4>
 		</div>
 		<div class="col-xs-12 col-md-9">
 					<p>I liked mathematics and science in school. I even managed to pass the entrance test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't study. It was all miserable. I have learned a lot from my mistakes. I won't make such mistakes ever again.</p>
 		</div>
 	</div>
+	
+
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 					<h1>Dinbai High School, Digras</h1>
-                	<h4><i>Wonderland...The Awesome Times...</i></h4>
+                	<h4>Wonderland...The Awesome Times...</h4>
 		</div>
 		<div class="col-xs-12 col-md-9">
 					<p>This was probably the best time of my life. It was fun. Life seemed very simple. Living with family. All those friends, those memories... School really shaped my life. It helped me explore myself and identify my qualities and weaknesses. I was a good student at school. Good at academics as well as extra-curricular.</p>
@@ -175,8 +188,7 @@
 	
 	<br>
 	<br>
-
-
+	<!-- SKILLS AND ACHIEVEMENTS -->
 	<div class="row">
 		<div class="col-xs-12 col-md-6 col-lg-5 title">
 			<h2><span class="glyphicon glyphicon-star"></span> SKILLS & ACHIEVEMENTS</h2>
@@ -185,7 +197,7 @@
 
 	<br>
 	<br>
-
+	<!-- TECHNICAL SKILLS -->
 	<div class="row">
 		<div class="col-xs-12 subtitle">
 			<h2>TECHNICAL SKILLS</h2>
@@ -202,7 +214,9 @@
 			<p>Python, Java, C, SQL.</p>
 		</div>
 	</div>
+
 	<br>
+
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<p style="font-weight: bold;">DATABASE</p> 
@@ -211,7 +225,9 @@
 			<p>SQLite, Oracle Database.</p>
 		</div>
 	</div>
+
 	<br>
+
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<p style="font-weight: bold;">WEB DEVELOPMENT</p>
@@ -220,8 +236,10 @@
 						<p>HTML, CSS, jQuery (Basic knowledge), BootStrap.</p>
 		</div>
 	</div>
+
 	<br>
-	<div class="row">			
+
+	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<p style="font-weight: bold;">TOOLS / FRAMEWORKS</p>
 		</div>
@@ -229,7 +247,9 @@
 			<p>Selenium WebDriver (Basic), Git/GitHub.</p>
 		</div>
 	</div>
+
 	<br>
+	<!-- PROJECTS -->
 	<div class="row">
 		<div class="col-xs-12 subtitle">
 			<h2>PROJECTS</h2>
@@ -245,7 +265,9 @@
 			<p>This is the project I am doing under persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</p>
 		</div>
 	</div>
+
 	<br>
+
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<p style="font-weight: bold;">RAILWAY TICKET BOOKING AUTOMATION</p>
@@ -255,9 +277,9 @@
 		</div>
 	</div>
 
-		<br>
-		<br>
-
+	<br>
+	<br>
+	<!-- INTERPERSONAL SKILLS -->
 	<div class="row">
 		<div class="col-xs-12 subtitle">
 			<h2>INTERPERSONAL SKILLS</h2>
@@ -273,7 +295,9 @@
 			<p>I am very confident in delivering speech in front of mass audience. I have won various awards in speech and debate competitions.</p>
 		</div>
 	</div>
+
 	<br>
+	
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<p style="font-weight: bold;">TEAM PLAYER</p>
@@ -282,7 +306,9 @@
 			<p>I enjoy working with people as a team. I realized this by playing various sports and also organizing some co-curricular events.</p>
 		</div>
 	</div>
+
 	<br>
+	
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
 			<p style="font-weight: bold;">LEADERSHIP</p>
@@ -292,15 +318,19 @@
 		</div>
 	</div>	
 
-		<br>
-		<br>
-
+	<br>
+	<br>
+	<!-- PUBLIC SPEAKING ACHIEVEMENTS -->
 	<div class="row">
 		<div class="col-xs-12 col-md-7 subtitle">
 			<h2>PUBLIC SPEAKING ACHIEVEMENTS</h2>
-			<br><br>
+			<br>
+			<br>
 		</div>
 	</div>
+	
+	<br>
+	<br>
 
 	<div class="row">
 		<div class="col-xs-12">
@@ -326,11 +356,10 @@
 			</ul>
 		</div>
 	</div>
-	</div>
 	
 	<br>
 	<br>
-
+	<!-- FOOTER -->
 	<div class="row">
 		<div class="col-xs-12 text-center">
 			<p class="text-muted" style="font-size: 1.25em">Made with <img src="pics/heart.png" alt="love" style="height: 1em"> by Raunak Singwi</p>
