Work experience and little colouring

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 			font-size: 2em;
 		}
 
+		h4{
+			color: #4ca5d0
+		}
+
 		.title{
 			font-family: 'Lato', sans-serif;
 			background-color: #ab5102;
@@ -62,25 +66,27 @@
 	<!-- PROFILE -->
 	<div class="row">
 		<div class="col-xs-12 col-md-4 col-lg-3 title">
-			<h2><span class="glyphicon glyphicon-user"></span> PROFILE</h2>
+			<h2><span class="glyphicon glyphicon-pencil"></span> ABOUT ME</h2>
 		</div>
 	</div>
 	
 	<br>
 	<br>
-	<!-- PROFILE -->
+
 	<div class="row">
 
 		<!-- IMAGE -->
 		<div class="col-xs-12 col-md-3">
 			<img src="pics/formal.jpg" alt="Raunak" class="img-responsive">
-			<br><br>
+			<br>
+			<br>
 		</div>
 		<!-- DESIGNATION -->
 		<div class="col-xs-12 col-md-5">
 			<h1>Raunak Singwi</h1>
-			<h4 style="color: #4ca5d0">R&D Intern, VMware.</h4>
-			<br><br>
+			<h4>R&D Intern, VMware.</h4>
+			<br>
+			<br>
 		</div>
 		
 		<div class="col-xs-12 col-md-4">
@@ -148,12 +154,68 @@
 	<!-- JOURNEY SO FAR -->
 	<div class="row">
 		<div class="col-xs-12 col-md-5 col-lg-4 title">
-			<h2><span class="glyphicon glyphicon-road"></span> JOURNEY SO FAR</h2>
+			<h2><span class="glyphicon glyphicon-flag"></span> JOURNEY SO FAR</h2>
 		</div>
 	</div>
 
 	<br>
 	<br>
+	<!-- WORK EXPERIENCE -->
+	<div class="row">
+		<div class="col-xs-12 subtitle">
+		<h2><span class="glyphicon glyphicon-briefcase"></span> WORK EXPERIENCE</h2>
+		<br>
+		<br>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<h1>VMware, Bangalore</h1>
+        	<h4>R&D Intern</h4>
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>I will be joining VMware at their bangalore office for a 26 weeks internship program starting from January 10th, 2018. It is a dream come true. I am super excited to start. I hope to get a full time offer at VMware.</p>
+		</div>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<h1>Persistent Systems, Nagpur.</h1>
+        	<h4>Project Intern</h4>
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>I am doing my final year project under Persistent Systems, Nagpur. This is under persistent's project selection program where they select students from campus and guide them for the project.</p>
+		</div>
+	</div>
+	<br>
+	<br>
+
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<h1>RGSTC-TIFAC-MSME Internship Program by Government of India.</h1>
+        	<h4>Project Intern</h4>
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>I have done an internship (2 months full time and 2 months part-time) at 'Anand Engineering and Consultancy Services' under the goverment's scheme. It was my first time working in the industry and I learnt a lot.</p>
+		</div>
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<!-- EDUCATION -->
+
+	<div class="row">
+		<div class="col-xs-12 subtitle">
+			<h2><span class="glyphicon glyphicon-education"></span> EDUCATION</h2>
+			<br>
+			<br>
+		</div>
+	</div>
 
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
@@ -200,7 +262,7 @@
 	<!-- TECHNICAL SKILLS -->
 	<div class="row">
 		<div class="col-xs-12 subtitle">
-			<h2>TECHNICAL SKILLS</h2>
+			<h2><span class="glyphicon glyphicon-wrench"></span> TECHNICAL SKILLS</h2>
 			<br>
 			<br>
 		</div>
@@ -252,7 +314,7 @@
 	<!-- PROJECTS -->
 	<div class="row">
 		<div class="col-xs-12 subtitle">
-			<h2>PROJECTS</h2>
+			<h2><span class="glyphicon glyphicon-tags"></span> PROJECTS</h2>
 			<br><br>
 		</div>
 	</div>
@@ -282,7 +344,7 @@
 	<!-- INTERPERSONAL SKILLS -->
 	<div class="row">
 		<div class="col-xs-12 subtitle">
-			<h2>INTERPERSONAL SKILLS</h2>
+			<h2><span class="glyphicon glyphicon-user"></span> INTERPERSONAL SKILLS</h2>
 			<br><br>
 		</div>
 	</div>
@@ -323,7 +385,7 @@
 	<!-- PUBLIC SPEAKING ACHIEVEMENTS -->
 	<div class="row">
 		<div class="col-xs-12 col-md-7 subtitle">
-			<h2>PUBLIC SPEAKING ACHIEVEMENTS</h2>
+			<h2><span class="glyphicon glyphicon-bullhorn"></span> PUBLIC SPEAKING ACHIEVEMENTS</h2>
 			<br>
 			<br>
 		</div>
@@ -335,23 +397,23 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<ul class="list-unstyled">
-					<li><span class="glyphicon glyphicon-star"></span> 1st Rank(Pair), Inter-Collegiate Debate Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+					<li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank(Pair), Inter-Collegiate Debate Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
 	                <br>
-	                <li><span class="glyphicon glyphicon-star"></span> 1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+	                <li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
 	                <br>
-	                <li><span class="glyphicon glyphicon-star"></span> 2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
+	                <li><span class="glyphicon glyphicon-pushpin"></span> 2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
 	                <br>
-	                <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Vidharbha Level Elocution Competition organized at 'C.P. and Berar college' in association with Late. Savarkar Memorial Committee, Nagpur. March, 2017</li>
+	                <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, Vidharbha Level Elocution Competition organized at 'C.P. and Berar college' in association with Late. Savarkar Memorial Committee, Nagpur. March, 2017</li>
 	                <br>
-	                <li><span class="glyphicon glyphicon-star"></span> 1st Rank, Orator Of The Year, organized by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur. 2015</li>
+	                <li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank, Orator Of The Year, organized by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur. 2015</li>
 	                <br>
-	                <li><span class="glyphicon glyphicon-star"></span> 1st Rank(Team of 5), Youth Parliament, organized by SRC,Ramdeobaba College of Engineering and Management, Nagpur. 2016</li>
+	                <li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank(Team of 5), Youth Parliament, organized by SRC,Ramdeobaba College of Engineering and Management, Nagpur. 2016</li>
 	                <br>
-	                <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Inter-College Debate & Extempore (combined) Competition organized by Government Institute of Forensic Sciences,Nagpur. January 31st, 2017</li>
+	                <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, Inter-College Debate & Extempore (combined) Competition organized by Government Institute of Forensic Sciences,Nagpur. January 31st, 2017</li>
 	                <br>
-	                 <li><span class="glyphicon glyphicon-star"></span> 3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organized by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
+	                 <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organized by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
 	                <br>
-	                <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Intra-College debate competition, organized by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur. October 25th, 2016</li>
+	                <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, Intra-College debate competition, organized by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur. October 25th, 2016</li>
 	                <br>
 			</ul>
 		</div>
