--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         	<h4>R&D Intern</h4>
 		</div>
 		<div class="col-xs-12 col-md-9">
-			<p>I will be joining VMware at their bangalore office for a 26 weeks internship program starting from January 10th, 2018. It is a dream come true. I am super excited to start. I hope to get a full time offer at VMware.</p>
+			<p>I am working at VMware, Bangalore as a R&D intern in the vCenterLifecycle team. Work so far have been amazing and I hope the coming days will be even more amazing and challing.</p>
 		</div>
 	</div>
 
