Few minor changes

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         	<h4>R&D Intern</h4>
 		</div>
 		<div class="col-xs-12 col-md-9">
-			<p>I am working at VMware, Bangalore as a R&D intern in the vCenterLifecycle team. Work so far have been amazing and I hope the coming days will be even more amazing and challing.</p>
+			<p>I am working at VMware, Bangalore as a R&D intern in the vCenterLifecycle team. Work so far have been exciting,amazing and challanging. And I am having a lot of fun as well.</p>
 		</div>
 	</div>
 
@@ -295,7 +295,7 @@
 			<p style="font-weight: bold;">WEB DEVELOPMENT</p>
 		</div>
 		<div class="col-xs-12 col-md-9">
-						<p>HTML, CSS, jQuery (Basic knowledge), BootStrap.</p>
+						<p>HTML, CSS, BootStrap.</p>
 		</div>
 	</div>
 
@@ -303,10 +303,10 @@
 
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-			<p style="font-weight: bold;">TOOLS / FRAMEWORKS</p>
+			<p style="font-weight: bold;">OTHERS</p>
 		</div>
 		<div class="col-xs-12 col-md-9">
-			<p>Selenium WebDriver (Basic), Git/GitHub.</p>
+			<p>Version Control (Git).</p>
 		</div>
 	</div>
 
