--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 	<div class="row">
 
 		<!-- IMAGE -->
-		<div class="col-xs-12 col-md-3">
-			<img src="pics/formal.jpg" alt="Raunak" class="img-responsive">
+		<div class="col-xs-12 col-md-4">
+			<img src="pics/working_on_the_couch.jpg" alt="Raunak" class="img-responsive">
 			<br>
 			<br>
 		</div>
 		<!-- DESIGNATION -->
-		<div class="col-xs-12 col-md-5">
+		<div class="col-xs-12 col-md-4">
 			<h1>Raunak Singwi</h1>
 			<h4>R&D Intern, VMware.</h4>
 			<br>
