--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 			font-family: 'Lato', sans-serif;
 			background-color: #ab5102;
 			color: white;
+			border: 1px solid;
+			padding: 10px;
+			box-shadow: 3px 6px #ab5102;
+			border-radius: 25px;
 		}
 
 		.subtitle{
