My heart is beating ;-)

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 	<!-- FOOTER -->
 	<div class="row">
 		<div class="col-xs-12 text-center">
-			<p class="text-muted" style="font-size: 1.25em">Made with <img src="pics/heart.png" alt="love" style="height: 1em"> by Raunak Singwi</p>
+			<p class="text-muted" style="font-size: 1.25em">Made with <img src="pics/heartbeat.gif" alt="love" style="height: 2em"> by Raunak Singwi</p>
 		</div>
 	</div>
 
