--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 
 			<!-- DESIGNATION -->
-			<div class="col-xs-12 col-md-4">
+			<div class="col-xs-12 col-md-4" id="name_tag">
 				<h1>Raunak Singwi</h1>
 				<h4>R&D Intern, VMware.</h4>
 				<br><br>
@@ -401,8 +401,9 @@
 	<script>
 		$(document).ready(function(){
 			$("#dp").addClass("animated tada");
-			$(".logo").addClass("animated tada")
-			$('#about_me').addClass("animated tada")
+			$(".logo").addClass("animated tada");
+			$("#about_me").addClass("animated tada");
+			$("name_tag").addClass("animated tada");
 		});
 	</script>
 </body>
