--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 			$("#dp").addClass("animated tada");
 			$(".logo").addClass("animated tada");
 			$("#about_me").addClass("animated tada");
-			$("name_tag").addClass("animated tada");
+			$("#name_tag").addClass("animated tada");
 		});
 	</script>
 </body>
