--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
 			$(".logo").addClass("animated tada");
 			$("#about_me").addClass("animated tada");
 			$("#name_tag").addClass("animated tada");
+			$(".bio").addClass("animated tada");
 		});
 	</script>
 </body>
