Update job role

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<!-- DESIGNATION -->
 			<div class="col-xs-12 col-md-4" id="name_tag">
 				<h1>Raunak Singwi</h1>
-				<h4>R&D Intern, VMware.</h4>
+				<h4>Member of Technical Staff - I @ VMware, Bangalore.</h4>
 				<br><br>
 			</div>
 			
