--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 	<!--Animate.css-->
-	<link rel="stylesheet" href="css/animate.min.css" type="text/css">
+	<!--<link rel="stylesheet" href="css/animate.min.css" type="text/css">-->
 
 	<style>
 		
@@ -32,22 +32,22 @@
 		}
 
 		h4{
-			color: #4ca5d0
+			color: #5CDB95
 		}
 
 		.title{
 			font-family: 'Lato', sans-serif;
-			background-color: #ab5102;
+			background-color: #379683;
 			color: white;
 			border: 1px solid;
 			padding: 10px;
-			box-shadow: 3px 6px #ab5102;
+			box-shadow: 3px 6px #379683;
 			border-radius: 25px;
 		}
 
 		.subtitle{
 			font-family: 'Lato', sans-serif;
-			color: #ab5102;
+			color: #379683;
 		}
 
 		.skills{
@@ -89,7 +89,7 @@
 			<!-- DESIGNATION -->
 			<div class="col-xs-12 col-md-4" id="name_tag">
 				<h1>Raunak Singwi</h1>
-				<h4>Member of Technical Staff - I @ VMware, Bangalore.</h4>
+				<h4>Member of Technical Staff @ <b>vm</b>ware R&D, Bangalore.</h4>
 				<br><br>
 			</div>
 			
@@ -169,10 +169,21 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
 				<h1>VMware, Bangalore</h1>
+	        	<h4>Member of Technical Staff</h4>
+			</div>
+			<div class="col-xs-12 col-md-9">
+				<p>Currently working at VMware, Bangalore in the vCenterLifecycle team.</p>
+			</div>
+		</div>
+		<br><br>
+
+		<div class="row">
+			<div class="col-xs-12 col-md-3">
+				<h1>VMware, Bangalore</h1>
 	        	<h4>R&D Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>I am working at VMware, Bangalore as a R&D intern in the vCenterLifecycle team. Work so far have been exciting,amazing and challanging. And I am having a lot of fun as well.</p>
+				<p>I have interned at VMware, Bangalore as a R&D intern in the vCenterLifecycle team. I have worked on the development of the 'vCenter External to Embedded Convergance Tool'.</p>
 			</div>
 		</div>
 		<br><br>
@@ -183,18 +194,18 @@
 	        	<h4>Project Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>I am doing my final year project under Persistent Systems, Nagpur. This is under persistent's project selection program where they select students from campus and guide them for the project.</p>
+				<p>Made my final year college project with Persistent Systems. Build a web application using Python's Django web development framework to answer queries related to my college. Keywords from user's query were matched to the query stored in the DB and the respective answer(s) from the DB were displayed to ther user.</p>
 			</div>
 		</div>
 		<br><br>
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<h1>RGSTC-TIFAC-MSME Internship Program by Government of India.</h1>
-	        	<h4>Project Intern</h4>
+				<h1>Anand Engineering and Consultancy Services</h1>
+	        	<h4>Summer Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>I have done an internship (2 months full time and 2 months part-time) at 'Anand Engineering and Consultancy Services' under the goverment's scheme. It was my first time working in the industry and I learnt a lot.</p>
+				<p>I have done a summer internship under the goverment's 'RGSTC-TIFAC-MSME internship program'. Worked on requirement gathering and making initial design for the monitoring and analysis of a machine. Did graph plotting for the data</p>
 			</div>
 		</div>
 		<br><br><br>
@@ -212,30 +223,30 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
 				<h1>Ramdeobaba College of Engineering, Nagpur</h1>
-	        	<h4>Current: Final Year</h4>
+	        	<h4>Bachelor of Engineerng in Information Techonlogy.</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Well, college is not what I assumed it to be. And definitely not what others told me about it ! All those, physics chemistry and mathematics classes in 1st year... I hated them ! I thought 2nd year will be where we dive into technology and start making software. How immature I was... I didn't want to learn most of the subjects ! I always wanted to be a software developer, a coder,a designer.... But yes, here I met genius people who guided me to become what I want to be. And yes, college have taught me a lot. It taught me, how to learn on your own. How to study the whole night to pass the exams next morning. How to do work with patience and dedication you don't like to do(writing journals and assignments). And the hostel life.... It taught me to adjust with everyone, quickly adopt the situations, how to work in a team, and much more. Hostel life is amazingly fun. </p>
+				<p>This was in real terms the turning point of my life. I came in as an academically average student, but full of enthusiasm and aspirations. I was interested in computers since childhood and wanted to master it. In college I got to learn a lot. I learned to code and many more aspects of computer science. Apart from that, I had really good life experiences, met good people, made friends. I got to explore myself, participate in lots of extra curricular activities and had great fun. I went out as a confident, independent and skilled man.</p>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
 				<h1>Padhye Sir's Akash Education, Akola</h1>
-	        	<h4>The <big>Bad</big> Times...</h4>
+	        	<h4>Engineering entrance coaching</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-						<p>I liked mathematics and science in school. I even managed to pass the entrance test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't study. It was all miserable. I have learned a lot from my mistakes. I won't make such mistakes ever again.</p>
+				<p>Living in a hostel, far from parents, studying with a bunch of very intelligent students, the real competition for success begun here. The competition to clear the entrance and get into a prestigious engineering college. This time tought me the importance of hard work.</p>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-						<h1>Dinbai High School, Digras</h1>
-	                	<h4>Wonderland...The Awesome Times...</h4>
+				<h1>Dinbai High School, Digras</h1>
+            	<h4>Schooling</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>This was probably the best time of my life. It was fun. Life seemed very simple. Living with family. All those friends, those memories... School really shaped my life. It helped me explore myself and identify my qualities and weaknesses. I was a good student at school. Good at academics as well as extra-curricular.</p>
+				<p>Living with family, not having any responsibility, fully enjoying childhood, school is just unforgetable. </p>
 			</div>
 		</div>
 		<br><br>
@@ -279,7 +290,7 @@
 				<p style="font-weight: bold;">WEB DEVELOPMENT</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>HTML, CSS, BootStrap.</p>
+				<p>HTML, CSS, Bootstrap, Django.</p>
 			</div>
 		</div>
 		<br>
@@ -288,7 +299,7 @@
 				<p style="font-weight: bold;">OTHERS</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Version Control (Git).</p>
+				<p>Git, Perforce</p>
 			</div>
 		</div>
 		<br>
@@ -400,11 +411,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		$(document).ready(function(){
-			$("#dp").addClass("animated tada");
-			$(".logo").addClass("animated tada");
-			$("#about_me").addClass("animated tada");
-			$("#name_tag").addClass("animated tada");
-			$(".bio").addClass("animated tada");
 		});
 	</script>
 </body>
