update profile picture

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			color: white;
 			border: 1px solid;
 			padding: 10px;
-			box-shadow: 3px 6px #379683;
+			box-shadow: 3px 6px #317f6e;
 			border-radius: 25px;
 		}
 
@@ -82,7 +82,7 @@
 
 			<!-- IMAGE -->
 			<div class="col-xs-12 col-md-4">
-				<img src="pics/casual.jpg" alt="Raunak" class="img-responsive" id="dp">
+				<img src="pics/profile_pic.jpg" alt="Raunak" class="img-responsive" id="dp">
 				<br><br>
 			</div>
 
